chore: set prepublish script

--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "generate-eslintrc": "ts-node -P tsconfig.tools.json scripts/generate-eslintrc.ts",
     "prelint": "yarn generate-eslintrc",
     "lint": "eslint './**/*.ts' --ext .ts",
+    "prepublishOnly": "yarn lint && yarn test",
     "report-coverage": "codecov -f coverage/lcov.info",
     "test": "jest"
   },
