--- a/package.json
+++ b/package.json
@@ -66,6 +66,7 @@
     "cz-conventional-changelog": "^3.0.2",
     "deepmerge": "^4.0.0",
     "eslint": "^6.1.0",
+    "eslint-import-resolver-typescript": "^1.1.1",
     "eslint-plugin-eslint-comments": "^3.1.2",
     "eslint-plugin-functional": "^1.0.0-rc.1",
     "eslint-plugin-import": "^2.18.2",
@@ -92,6 +93,7 @@
     "@typescript-eslint/eslint-plugin": "*",
     "@typescript-eslint/parser": "*",
     "eslint": ">=6.0.0",
+    "eslint-import-resolver-typescript": "*",
     "eslint-plugin-eslint-comments": "*",
     "eslint-plugin-functional": "*",
     "eslint-plugin-import": "*",
