chore: deepmerge is a dependency not a devDependency

--- a/package.json
+++ b/package.json
@@ -49,6 +49,9 @@
       "path": "./node_modules/cz-conventional-changelog"
     }
   },
+  "dependencies": {
+    "deepmerge": "^4.0.0"
+  },
   "devDependencies": {
     "@commitlint/cli": "^8.1.0",
     "@commitlint/config-conventional": "^8.1.0",
@@ -61,7 +64,6 @@
     "codecov": "^3.5.0",
     "commitizen": "^4.0.3",
     "cz-conventional-changelog": "^3.0.2",
-    "deepmerge": "^4.0.0",
     "eslint": "^6.1.0",
     "eslint-import-resolver-typescript": "^1.1.1",
     "eslint-plugin-eslint-comments": "^3.1.2",
