--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@rebeccastevens/eslint-config",
-  "version": "0.1.5",
+  "version": "0.0.0-development",
   "description": "My ESLint shareable config.",
   "keywords": [
     "eslint config"
@@ -55,6 +55,11 @@
   "devDependencies": {
     "@commitlint/cli": "^8.2.0",
     "@commitlint/config-conventional": "^8.2.0",
+    "@semantic-release/changelog": "^3.0.4",
+    "@semantic-release/commit-analyzer": "^6.3.0",
+    "@semantic-release/github": "^5.4.3",
+    "@semantic-release/npm": "^5.1.15",
+    "@semantic-release/release-notes-generator": "^7.3.0",
     "@types/eslint": "^6.1.0",
     "@types/jest": "^24.0.18",
     "@types/node": "^12.7.5",
@@ -85,6 +90,7 @@
     "rollup-plugin-commonjs": "^10.1.0",
     "rollup-plugin-node-resolve": "^5.2.0",
     "rollup-plugin-typescript2": "^0.24.2",
+    "semantic-release": "^15.13.24",
     "ts-jest": "^24.1.0",
     "ts-node": "^8.4.1",
     "typescript": "^3.6.3"
