--- a/.releaserc.yml
+++ b/.releaserc.yml
@@ -2,8 +2,8 @@ plugins:
   - '@semantic-release/commit-analyzer'
   - '@semantic-release/release-notes-generator'
   - '@semantic-release/changelog'
-  - '@semantic-release/git'
-      assets:
+  - - '@semantic-release/git'
+    - assets:
         - CHANGELOG.md
         - package.json
       message: "chore(release): ${nextRelease.version} [skip ci]\n\n${nextRelease.notes}"
