--- a/.github/workflows/node.yml
+++ b/.github/workflows/node.yml
@@ -18,8 +18,7 @@ jobs:
           node-version: ${{ matrix.node-version }}
 
       - name: Install Dependencies
-        run: |
-          yarn install
+        run: yarn install
         env:
           CI: true
 
@@ -44,6 +43,18 @@ jobs:
       - name: Checkout Repo
         if: github.ref == 'refs/heads/master'
         uses: actions/checkout@v1
+
+      - name: Set up Node v12.x
+        if: github.ref == 'refs/heads/master'
+        uses: actions/setup-node@v1
+        with:
+          node-version: 12.x
+
+      - name: Install Dependencies
+        if: github.ref == 'refs/heads/master'
+        run: yarn install
+        env:
+          CI: true
 
       - name: Semantic Release
         if: github.ref == 'refs/heads/master'
