--- a/.releaserc.yml
+++ b/.releaserc.yml
@@ -1,7 +1,10 @@
 plugins:
   - '@semantic-release/commit-analyzer'
   - '@semantic-release/release-notes-generator'
-  - '@semantic-release/changelog'
+  - - '@semantic-release/changelog'
+    - changelogTitle: '# Changelog
+
+        All notable changes to this project will be documented in this file. Dates are displayed in UTC.'
   - '@semantic-release/git'
   - '@semantic-release/npm'
   - '@semantic-release/github'
