build(registry): switched to the GitHub Package Registry
The workflow will cross-publish to the npm registry

--- a/package.json
+++ b/package.json
@@ -106,5 +106,8 @@
     "eslint-plugin-simple-import-sort": "*",
     "eslint-plugin-sonarjs": "*",
     "eslint-plugin-unicorn": "*"
+  },
+  "publishConfig": {
+    "registry": "https://npm.pkg.github.com/"
   }
 }
