--- a/.github/workflows/node.yml
+++ b/.github/workflows/node.yml
@@ -62,4 +62,10 @@ jobs:
         uses: codfish/semantic-release-action@master
         env:
           GH_TOKEN: ${{ secrets.GH_TOKEN }}
+          NPM_TOKEN: ${{ secrets.GH_TOKEN }} # Publishing to GPR so use GH Token
+
+      - name: Mirror Release
+        if: steps.semantic.outputs.new-release-published == 'true'
+        run: npm publish --ignore-scripts --@OWNER:registry='https://registry.npmjs.org'
+        env:
           NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
