--- a/package.json
+++ b/package.json
@@ -19,11 +19,11 @@
     "dist/"
   ],
   "type": "module",
-  "main": "dist/index.cjs",
   "exports": {
-    "require": "./dist/index.cjs",
-    "default": "./dist/index.mjs"
+    "default": "./dist/index.mjs",
+    "require": "./dist/index.cjs"
   },
+  "main": "dist/index.cjs",
   "scripts": {
     "prebuild": "rimraf dist",
     "build": "rollup -c",
