--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -9,19 +9,22 @@ jobs:
   publish:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v2
+      - name: Checkout
+        uses: actions/checkout@v2
+        with:
+          fetch-depth: 0
+          persist-credentials: false
 
-      - uses: actions/setup-node@v1
+      - name: Setup NodeJs
+        uses: actions/setup-node@v1
+        with:
+          node-version: 14
 
-      - name: Install Dependencies
-        run: yarn install
-        env:
-          CI: true
+      - name: Install dependencies
+        run: yarn install --frozen-lockfile
 
       - name: Build
         run: yarn build
-        env:
-          CI: true
 
       - name: Setup git
         run: |
@@ -31,6 +34,7 @@ jobs:
       # Publish to NPMJS
       - uses: actions/setup-node@v1
         with:
+          node-version: 14
           registry-url: "https://registry.npmjs.org/"
       - name: Publish to NPMJS
         id: semantic
@@ -43,6 +47,7 @@ jobs:
       - if: steps.semantic.outputs.new-release-published == 'true'
         uses: actions/setup-node@v1
         with:
+          node-version: 14
           registry-url: https://npm.pkg.github.com/
       - name: Publish to GitHub Package Registry
         if: steps.semantic.outputs.new-release-published == 'true'
