--- a/package.json
+++ b/package.json
@@ -33,7 +33,7 @@
     "prebuild": "rimraf dist",
     "build": "rollup -c",
     "commit": "cz",
-    "generate-eslintrc": "ts-node -P tsconfig.tools.json scripts/generate-eslintrc.ts",
+    "generate-eslintrc": "ts-node -P tsconfig.tools.json -r tsconfig-paths/register scripts/generate-eslintrc.ts",
     "prelint": "yarn generate-eslintrc",
     "lint": "eslint .",
     "report-coverage": "codecov -f coverage/lcov.info",
@@ -63,6 +63,7 @@
     "commitizen": "^4.2.2",
     "cz-conventional-changelog": "^3.3.0",
     "eslint": "^7.16.0",
+    "eslint-config-prettier": "^7.1.0",
     "eslint-import-resolver-typescript": "^2.3.0",
     "eslint-plugin-eslint-comments": "^3.2.0",
     "eslint-plugin-functional": "^3.1.0",
@@ -70,7 +71,9 @@
     "eslint-plugin-jest": "^24.1.3",
     "eslint-plugin-jsdoc": "^30.7.9",
     "eslint-plugin-markdown": "^1.0.2",
+    "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-optimize-regex": "^1.2.0",
+    "eslint-plugin-prettier": "^3.3.0",
     "eslint-plugin-promise": "^4.2.1",
     "eslint-plugin-simple-import-sort": "^7.0.0",
     "eslint-plugin-sonarjs": "^0.5.0",
@@ -82,9 +85,11 @@
     "prettier": "^2.2.1",
     "rimraf": "^3.0.2",
     "rollup": "^2.35.1",
+    "rollup-plugin-auto-external": "^2.0.0",
     "semantic-release": "^17.3.0",
     "ts-jest": "^26.4.4",
     "ts-node": "^9.1.1",
+    "tsconfig-paths": "^3.9.0",
     "typescript": "^4.1.3"
   },
   "peerDependencies": {
@@ -102,5 +107,8 @@
     "eslint-plugin-simple-import-sort": "*",
     "eslint-plugin-sonarjs": "*",
     "eslint-plugin-unicorn": "*"
+  },
+  "engines": {
+    "node": ">=12.0.0"
   }
 }
