--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,15 +7,16 @@
     "strict": true,
     "esModuleInterop": true,
     "moduleResolution": "node",
-    "noImplicitAny": true,
+    "noImplicitAny": false,
     "noImplicitReturns": true,
     "noImplicitThis": true,
     "allowSyntheticDefaultImports": true,
     "resolveJsonModule": true,
     "baseUrl": ".",
     "paths": {
-      "@plugins": ["src/plugins/index"],
-      "@builtin": ["src/builtin"]
+      "~": ["src"],
+      "~/builtin": ["src/builtin"],
+      "~/plugins": ["src/plugins"]
     }
   }
 }
