test: switched to using ava for testing

--- a/package.json
+++ b/package.json
@@ -37,7 +37,7 @@
     "prelint": "yarn generate-eslintrc",
     "lint": "eslint .",
     "report-coverage": "codecov -f coverage/lcov.info",
-    "test": "jest"
+    "test": "nyc ava"
   },
   "dependencies": {
     "deepmerge": "^4.0.0"
@@ -55,20 +55,20 @@
     "@semantic-release/npm": "^7.0.9",
     "@semantic-release/release-notes-generator": "^9.0.1",
     "@types/eslint": "^7.2.6",
-    "@types/jest": "^26.0.19",
     "@types/node": "~12.19.9",
     "@typescript-eslint/eslint-plugin": "^4.10.0",
     "@typescript-eslint/parser": "^4.10.0",
+    "ava": "^3.14.0",
     "codecov": "^3.8.1",
     "commitizen": "^4.2.2",
     "cz-conventional-changelog": "^3.3.0",
     "eslint": "^7.16.0",
     "eslint-config-prettier": "^7.1.0",
     "eslint-import-resolver-typescript": "^2.3.0",
+    "eslint-plugin-ava": "^11.0.0",
     "eslint-plugin-eslint-comments": "^3.2.0",
     "eslint-plugin-functional": "^3.1.0",
     "eslint-plugin-import": "^2.22.1",
-    "eslint-plugin-jest": "^24.1.3",
     "eslint-plugin-jsdoc": "^30.7.9",
     "eslint-plugin-markdown": "^1.0.2",
     "eslint-plugin-node": "^11.1.0",
@@ -79,15 +79,13 @@
     "eslint-plugin-sonarjs": "^0.5.0",
     "eslint-plugin-unicorn": "^24.0.0",
     "husky": "^4.3.6",
-    "jest": "^26.6.3",
-    "jest-cli": "^26.6.3",
     "lint-staged": "^10.5.3",
+    "nyc": "^15.1.0",
     "prettier": "^2.2.1",
     "rimraf": "^3.0.2",
     "rollup": "^2.35.1",
     "rollup-plugin-auto-external": "^2.0.0",
     "semantic-release": "^17.3.0",
-    "ts-jest": "^26.4.4",
     "ts-node": "^9.1.1",
     "tsconfig-paths": "^3.9.0",
     "typescript": "^4.1.3"
