chore: fix broken "\" usage

--- a/.github/config.yml
+++ b/.github/config.yml
@@ -6,4 +6,4 @@ todo:
   autoAssign: true
   caseSensitive: true
   reopenClosed: true
-  exclude: "^(\.github|\.vscode)\/"
+  exclude: "^(\\.github|\\.vscode)\\/"
