--- a/package.json
+++ b/package.json
@@ -70,7 +70,7 @@
     "eslint-config-prettier": "^7.1.0",
     "eslint-import-resolver-typescript": "^2.3.0",
     "eslint-plugin-eslint-comments": "^3.2.0",
-    "eslint-plugin-functional": "^3.1.0",
+    "eslint-plugin-functional": "^3.2.1",
     "eslint-plugin-import": "^2.22.1",
     "eslint-plugin-jsdoc": "^30.7.9",
     "eslint-plugin-markdown": "^1.0.2",
@@ -91,6 +91,7 @@
     "semantic-release": "^17.3.0",
     "ts-node": "^9.1.1",
     "tsconfig-paths": "^3.9.0",
+    "tslib": "^2.0.3",
     "typescript": "^4.1.3"
   },
   "peerDependencies": {
