--- a/.github/settings.yml
+++ b/.github/settings.yml
@@ -8,7 +8,7 @@ repository:
   has_projects: true
   has_wiki: false
   has_downloads: true
-  default_branch: master
+  default_branch: main
   allow_squash_merge: false
   allow_merge_commit: true
   allow_rebase_merge: true
@@ -126,7 +126,7 @@ labels:
     description: "It's now live."
 
 branches:
-  - name: master
+  - name: main
     protection:
       required_pull_request_reviews: null
       required_status_checks:
