chore: update deps, tools, and configs

--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -3,7 +3,7 @@ updates:
   - package-ecosystem: "npm"
     directory: "/"
     schedule:
-      interval: "live"
+      interval: "monthly"
     labels:
       - "Type: Maintenance"
       - ":blue_heart:"
