--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -28,9 +28,9 @@ jobs:
         uses: actions/checkout@v2
 
       - name: Setup NodeJs
-        uses: actions/setup-node@v1
+        uses: actions/setup-node@v2
         with:
-          node-version: 14
+          node-version: "lts/*"
 
       - name: Install Dependencies
         run: yarn install --frozen-lockfile
@@ -40,3 +40,9 @@ jobs:
 
       - name: Run Linting Checks
         run: yarn lint
+
+      - name: Run Formatting Checks
+        run: yarn check-format
+
+      - name: Run Spelling Checks
+        run: yarn check-spelling
