--- a/package.json
+++ b/package.json
@@ -39,35 +39,42 @@
   "scripts": {
     "prebuild": "rimraf dist",
     "build": "rollup -c",
-    "commit": "cz",
-    "generate-eslintrc": "ts-node -P tsconfig.tools.json -r tsconfig-paths/register scripts/generate-eslintrc.ts",
-    "prelint": "yarn generate-eslintrc",
-    "lint": "eslint .",
+    "check-format": "prettier --list-different \"./**/*.{md,ts,yml}\"",
+    "check-spelling": "cspell --config=.cspell.json \"**/*.{md,ts}\"",
+    "cz": "git-cz",
+    "format": "prettier --write \"./**/*.{md,ts,yml}\"",
+    "generate-eslintrc": "ts-node -P scripts/tsconfig.json -r tsconfig-paths/register scripts/generate-eslintrc.ts",
+    "lint": "yarn lint:js && yarn lint:md",
+    "prelint:js": "yarn generate-eslintrc",
+    "lint:js": "eslint .",
+    "lint:md": "markdownlint \"**/*.md\" --config=.markdownlint.json --ignore-path=.markdownlintignore",
+    "prepare": "husky install",
     "test": "echo no tests"
   },
   "dependencies": {
-    "deepmerge": "^4.0.0"
+    "deepmerge-ts": "^1.0.1"
   },
   "devDependencies": {
-    "@commitlint/cli": "^11.0.0",
-    "@commitlint/config-conventional": "^11.0.0",
-    "@rollup/plugin-commonjs": "^17.0.0",
-    "@rollup/plugin-node-resolve": "^11.0.1",
-    "@rollup/plugin-typescript": "^8.1.0",
-    "@semantic-release/changelog": "^5.0.0",
+    "@commitlint/cli": "^13.1.0",
+    "@commitlint/config-conventional": "^13.1.0",
+    "@rollup/plugin-commonjs": "^20.0.0",
+    "@rollup/plugin-node-resolve": "^13.0.4",
+    "@rollup/plugin-typescript": "^8.2.5",
+    "@semantic-release/changelog": "^5.0.1",
     "@semantic-release/commit-analyzer": "^8.0.1",
-    "@semantic-release/git": "^9.0.0",
-    "@semantic-release/github": "^7.2.0",
-    "@semantic-release/npm": "^7.0.9",
-    "@semantic-release/release-notes-generator": "^9.0.1",
-    "@types/eslint": "^7.2.6",
-    "@types/node": "~14.14.14",
+    "@semantic-release/git": "^9.0.1",
+    "@semantic-release/github": "^7.2.3",
+    "@semantic-release/npm": "^7.1.3",
+    "@semantic-release/release-notes-generator": "^9.0.3",
+    "@types/eslint": "~7.2.0",
+    "@types/node": "~14.0.0",
     "@typescript-eslint/eslint-plugin": "^4.10.0",
     "@typescript-eslint/parser": "^4.10.0",
-    "commitizen": "^4.2.2",
+    "commitizen": "^4.2.4",
+    "cspell": "^5.9.0",
     "cz-conventional-changelog": "^3.3.0",
     "eslint": "^7.16.0",
-    "eslint-config-prettier": "^7.1.0",
+    "eslint-config-prettier": "^8.3.0",
     "eslint-import-resolver-typescript": "^2.3.0",
     "eslint-plugin-eslint-comments": "^3.2.0",
     "eslint-plugin-functional": "^3.2.2",
@@ -76,27 +83,28 @@
     "eslint-plugin-markdown": "^1.0.2",
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-optimize-regex": "^1.2.0",
-    "eslint-plugin-prettier": "^3.3.0",
+    "eslint-plugin-prettier": "^4.0.0",
     "eslint-plugin-promise": "^4.2.1",
     "eslint-plugin-sonarjs": "^0.5.0",
     "eslint-plugin-unicorn": "^24.0.0",
-    "husky": "^4.3.6",
-    "lint-staged": "^10.5.3",
+    "husky": "^7.0.2",
+    "lint-staged": "^11.1.2",
+    "markdownlint-cli": "^0.28.1",
     "nyc": "^15.1.0",
-    "prettier": "^2.2.1",
+    "prettier": "^2.3.2",
     "rimraf": "^3.0.2",
-    "rollup": "^2.35.1",
+    "rollup": "^2.56.3",
     "rollup-plugin-auto-external": "^2.0.0",
-    "semantic-release": "^17.3.0",
-    "ts-node": "^9.1.1",
-    "tsconfig-paths": "^3.9.0",
-    "tslib": "^2.0.3",
-    "typescript": "^4.1.3"
+    "semantic-release": "^17.4.7",
+    "ts-node": "^10.2.1",
+    "tsconfig-paths": "^3.11.0",
+    "tslib": "^2.3.1",
+    "typescript": "^4.5.0-dev.20210906"
   },
   "peerDependencies": {
     "@typescript-eslint/eslint-plugin": "*",
     "@typescript-eslint/parser": "*",
-    "eslint": ">=6.0.0",
+    "eslint": ">=7.2.0",
     "eslint-import-resolver-typescript": "*",
     "eslint-plugin-eslint-comments": "*",
     "eslint-plugin-functional": "*",
