--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,23 +1,11 @@
 {
+  "extends": "./tsconfig.build.json",
   "compilerOptions": {
-    "target": "ES2020",
-    "module": "esnext",
-    "lib": ["esnext"],
-    "alwaysStrict": true,
-    "strict": true,
-    "esModuleInterop": true,
-    "moduleResolution": "node",
     "noImplicitAny": false,
-    "noImplicitReturns": true,
-    "noImplicitThis": true,
-    "allowSyntheticDefaultImports": true,
-    "resolveJsonModule": true,
-    "baseUrl": ".",
-    "paths": {
-      "~": ["src"],
-      "~/builtin": ["src/builtin"],
-      "~/configs/*": ["src/configs/*"],
-      "~/plugins/*": ["src/plugins/*"]
-    }
-  }
+    "rootDir": "."
+  },
+  "include": [
+    ".",
+    "src"
+  ]
 }
