--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -30,7 +30,7 @@ jobs:
       - name: Setup NodeJs
         uses: actions/setup-node@v2
         with:
-          node-version: "lts/*"
+          node-version: 16
 
       - name: Install Dependencies
         run: yarn install --frozen-lockfile
