--- a/package.json
+++ b/package.json
@@ -91,7 +91,7 @@
     "lint-staged": "^11.1.2",
     "markdownlint-cli": "^0.28.1",
     "nyc": "^15.1.0",
-    "prettier": "^2.3.2",
+    "prettier": "^2.4.0",
     "rimraf": "^3.0.2",
     "rollup": "^2.56.3",
     "rollup-plugin-auto-external": "^2.0.0",
@@ -99,7 +99,7 @@
     "ts-node": "^10.2.1",
     "tsconfig-paths": "^3.11.0",
     "tslib": "^2.3.1",
-    "typescript": "^4.5.0-dev.20210906"
+    "typescript": "^4.4.3"
   },
   "peerDependencies": {
     "@typescript-eslint/eslint-plugin": "*",
