--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -18,7 +18,7 @@ jobs:
       - name: Setup NodeJs
         uses: actions/setup-node@v2
         with:
-          node-version: 16
+          node-version: "lts/*"
 
       - name: Install dependencies
         run: yarn install --frozen-lockfile
@@ -29,7 +29,7 @@ jobs:
       # Publish to NPMJS
       - uses: actions/setup-node@v2
         with:
-          node-version: 16
+          node-version: "lts/*"
           registry-url: "https://registry.npmjs.org/"
       - name: Publish to NPMJS
         id: semantic
@@ -42,7 +42,7 @@ jobs:
       - if: steps.semantic.outputs.new-release-published == 'true'
         uses: actions/setup-node@v2
         with:
-          node-version: 16
+          node-version: "lts/*"
           registry-url: https://npm.pkg.github.com/
       - name: Publish to GitHub Package Registry
         if: steps.semantic.outputs.new-release-published == 'true'
