--- a/package.json
+++ b/package.json
@@ -55,56 +55,56 @@
     "deepmerge-ts": "^1.0.1"
   },
   "devDependencies": {
-    "@commitlint/cli": "^13.1.0",
-    "@commitlint/config-conventional": "^13.1.0",
-    "@rollup/plugin-commonjs": "^20.0.0",
+    "@commitlint/cli": "^13.2.1",
+    "@commitlint/config-conventional": "^13.2.0",
+    "@rollup/plugin-commonjs": "^21.0.0",
     "@rollup/plugin-node-resolve": "^13.0.4",
-    "@rollup/plugin-typescript": "^8.2.5",
+    "@rollup/plugin-typescript": "^8.3.0",
     "@semantic-release/changelog": "^6.0.0",
     "@semantic-release/commit-analyzer": "^9.0.1",
     "@semantic-release/git": "^10.0.0",
     "@semantic-release/github": "^8.0.1",
-    "@semantic-release/npm": "^8.0.0",
+    "@semantic-release/npm": "^8.0.1",
     "@semantic-release/release-notes-generator": "^10.0.2",
-    "@types/eslint": "~7.28.0",
-    "@types/node": "~16.9.1",
-    "@typescript-eslint/eslint-plugin": "^4.10.0",
-    "@typescript-eslint/parser": "^4.10.0",
+    "@types/eslint": "^7.28.1",
+    "@types/node": "^16.11.1",
+    "@typescript-eslint/eslint-plugin": "^5.0.0",
+    "@typescript-eslint/parser": "^5.0.0",
     "commitizen": "^4.2.4",
-    "cspell": "^5.9.0",
+    "cspell": "^5.12.3",
     "cz-conventional-changelog": "^3.3.0",
-    "eslint": "^7.16.0",
+    "eslint": "^8.0.0",
     "eslint-config-prettier": "^8.3.0",
     "eslint-import-resolver-typescript": "^2.3.0",
     "eslint-plugin-eslint-comments": "^3.2.0",
-    "eslint-plugin-functional": "^3.2.2",
-    "eslint-plugin-import": "^2.22.1",
-    "eslint-plugin-jsdoc": "^36.1.0",
+    "eslint-plugin-functional": "^4.0.0",
+    "eslint-plugin-import": "^2.25.2",
+    "eslint-plugin-jsdoc": "^36.1.1",
     "eslint-plugin-markdown": "^2.2.0",
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-optimize-regex": "^1.2.0",
     "eslint-plugin-prettier": "^4.0.0",
     "eslint-plugin-promise": "^5.1.0",
     "eslint-plugin-sonarjs": "^0.10.0",
-    "eslint-plugin-unicorn": "^36.0.0",
+    "eslint-plugin-unicorn": "^37.0.1",
     "husky": "^7.0.2",
-    "lint-staged": "^11.1.2",
-    "markdownlint-cli": "^0.28.1",
+    "lint-staged": "^11.2.3",
+    "markdownlint-cli": "^0.29.0",
     "nyc": "^15.1.0",
-    "prettier": "^2.4.0",
+    "prettier": "^2.4.1",
     "rimraf": "^3.0.2",
     "rollup": "^2.56.3",
     "rollup-plugin-auto-external": "^2.0.0",
     "semantic-release": "^18.0.0",
-    "ts-node": "^10.2.1",
+    "ts-node": "^10.3.0",
     "tsconfig-paths": "^3.11.0",
     "tslib": "^2.3.1",
-    "typescript": "^4.4.3"
+    "typescript": "^4.4.4"
   },
   "peerDependencies": {
     "@typescript-eslint/eslint-plugin": "*",
     "@typescript-eslint/parser": "*",
-    "eslint": ">=7.2.0",
+    "eslint": ">=8.0.0",
     "eslint-import-resolver-typescript": "*",
     "eslint-plugin-eslint-comments": "*",
     "eslint-plugin-functional": "*",
@@ -117,6 +117,6 @@
     "eslint-plugin-unicorn": "*"
   },
   "engines": {
-    "node": ">=14.0.0"
+    "node": "^14.17.0 || >=16.0.0"
   }
 }
