feat: update script config and add test config

--- a/package.json
+++ b/package.json
@@ -28,6 +28,10 @@
       "import": "./dist/script.mjs",
       "require": "./dist/script.cjs"
     },
+    "./test": {
+      "import": "./dist/test.mjs",
+      "require": "./dist/test.cjs"
+    },
     "./typescript": {
       "import": "./dist/typescript.mjs",
       "require": "./dist/typescript.cjs"
