--- a/package.json
+++ b/package.json
@@ -113,18 +113,19 @@
   "peerDependencies": {
     "@typescript-eslint/eslint-plugin": "*",
     "@typescript-eslint/parser": "*",
-    "eslint": ">=8.0.0",
     "eslint-import-resolver-typescript": "*",
     "eslint-plugin-eslint-comments": "*",
     "eslint-plugin-functional": "*",
     "eslint-plugin-import": "*",
     "eslint-plugin-jsdoc": "*",
     "eslint-plugin-markdown": "*",
+    "eslint-plugin-node": "*",
     "eslint-plugin-optimize-regex": "*",
     "eslint-plugin-promise": "*",
     "eslint-plugin-sonarjs": "*",
     "eslint-plugin-tsdoc": "*",
-    "eslint-plugin-unicorn": "*"
+    "eslint-plugin-unicorn": "*",
+    "eslint": ">=8.0.0"
   },
   "engines": {
     "node": "^14.17.0 || >=16.0.0"
