--- a/package.json
+++ b/package.json
@@ -114,7 +114,7 @@
     "eslint": ">=8.0.0",
     "eslint-import-resolver-typescript": "*",
     "eslint-plugin-eslint-comments": "*",
-    "eslint-plugin-functional": "*",
+    "eslint-plugin-functional": ">=5.0.0",
     "eslint-plugin-import": "*",
     "eslint-plugin-jsdoc": "*",
     "eslint-plugin-markdown": "*",
