--- a/package.json
+++ b/package.json
@@ -79,11 +79,11 @@
     "commitizen": "^4.2.4",
     "cspell": "^6.1.0",
     "cz-conventional-changelog": "^3.3.0",
-    "eslint": "^8.8.0",
+    "eslint": "^8.24.0",
     "eslint-config-prettier": "^8.3.0",
     "eslint-import-resolver-typescript": "^3.4.0",
     "eslint-plugin-eslint-comments": "^3.2.0",
-    "eslint-plugin-functional": "^4.2.0",
+    "eslint-plugin-functional": "^5.0.0-beta.8",
     "eslint-plugin-import": "^2.25.4",
     "eslint-plugin-jsdoc": "^39.2.9",
     "eslint-plugin-markdown": "^3.0.0",
@@ -92,7 +92,6 @@
     "eslint-plugin-prettier": "^4.0.0",
     "eslint-plugin-promise": "^6.0.0",
     "eslint-plugin-sonarjs": "^0.15.0",
-    "eslint-plugin-tsdoc": "^0.2.14",
     "eslint-plugin-unicorn": "^43.0.0",
     "husky": "^8.0.1",
     "lint-staged": "^13.0.3",
@@ -111,7 +110,7 @@
   "peerDependencies": {
     "@typescript-eslint/eslint-plugin": "*",
     "@typescript-eslint/parser": "*",
-    "eslint": ">=8.0.0",
+    "eslint": ">=8.24.0",
     "eslint-import-resolver-typescript": "*",
     "eslint-plugin-eslint-comments": "*",
     "eslint-plugin-functional": ">=5.0.0",
@@ -122,7 +121,6 @@
     "eslint-plugin-optimize-regex": "*",
     "eslint-plugin-promise": "*",
     "eslint-plugin-sonarjs": "*",
-    "eslint-plugin-tsdoc": "*",
     "eslint-plugin-unicorn": "*"
   },
   "engines": {
