--- a/package.json
+++ b/package.json
@@ -83,7 +83,7 @@
     "eslint-config-prettier": "^8.3.0",
     "eslint-import-resolver-typescript": "^3.4.0",
     "eslint-plugin-eslint-comments": "^3.2.0",
-    "eslint-plugin-functional": "^5.0.0-beta.8",
+    "eslint-plugin-functional": "^5.0.0-beta.14",
     "eslint-plugin-import": "^2.25.4",
     "eslint-plugin-jsdoc": "^39.2.9",
     "eslint-plugin-markdown": "^3.0.0",
@@ -113,7 +113,7 @@
     "eslint": ">=8.24.0",
     "eslint-import-resolver-typescript": "*",
     "eslint-plugin-eslint-comments": "*",
-    "eslint-plugin-functional": ">=5.0.0",
+    "eslint-plugin-functional": ">=5.0.0-beta.14",
     "eslint-plugin-import": "*",
     "eslint-plugin-jsdoc": "*",
     "eslint-plugin-markdown": "*",
