--- a/.github/renovate.json
+++ b/.github/renovate.json
@@ -1,6 +1,10 @@
 {
   "$schema": "https://docs.renovatebot.com/renovate-schema.json",
-  "extends": ["config:base", "helpers:disableTypesNodeMajor"],
+  "extends": [
+    "config:base",
+    "helpers:disableTypesNodeMajor",
+    "schedule:monthly"
+  ],
   "postUpdateOptions": ["yarnDedupeHighest"],
   "labels": ["Type: Maintenance", ":blue_heart:"],
   "automerge": true,
