--- a/package.json
+++ b/package.json
@@ -58,54 +58,54 @@
     "test": "echo no tests"
   },
   "dependencies": {
-    "deepmerge-ts": "^4.0.0"
+    "deepmerge-ts": "^4.2.2"
   },
   "devDependencies": {
-    "@commitlint/cli": "^17.0.2",
-    "@commitlint/config-conventional": "^17.0.2",
-    "@rollup/plugin-commonjs": "^22.0.0",
-    "@rollup/plugin-node-resolve": "^14.0.0",
-    "@rollup/plugin-typescript": "^8.3.0",
-    "@semantic-release/changelog": "^6.0.1",
+    "@commitlint/cli": "^17.4.2",
+    "@commitlint/config-conventional": "^17.4.2",
+    "@rollup/plugin-commonjs": "^24.0.1",
+    "@rollup/plugin-node-resolve": "^15.0.1",
+    "@rollup/plugin-typescript": "^11.0.0",
+    "@semantic-release/changelog": "^6.0.2",
     "@semantic-release/commit-analyzer": "^9.0.2",
     "@semantic-release/git": "^10.0.1",
-    "@semantic-release/github": "^8.0.2",
-    "@semantic-release/npm": "^9.0.0",
+    "@semantic-release/github": "^8.0.7",
+    "@semantic-release/npm": "^9.0.2",
     "@semantic-release/release-notes-generator": "^10.0.3",
-    "@types/eslint": "^8.4.1",
-    "@types/node": "^17.0.15",
-    "@typescript-eslint/eslint-plugin": "^5.10.2",
-    "@typescript-eslint/parser": "^5.10.2",
-    "commitizen": "^4.2.4",
-    "cspell": "^6.1.0",
+    "@types/eslint": "^8.4.10",
+    "@types/node": "^18.11.18",
+    "@typescript-eslint/eslint-plugin": "^5.49.0",
+    "@typescript-eslint/parser": "^5.49.0",
+    "commitizen": "^4.3.0",
+    "cspell": "^6.19.2",
     "cz-conventional-changelog": "^3.3.0",
-    "eslint": "^8.24.0",
-    "eslint-config-prettier": "^8.3.0",
-    "eslint-import-resolver-typescript": "^3.4.0",
+    "eslint": "^8.33.0",
+    "eslint-config-prettier": "^8.6.0",
+    "eslint-import-resolver-typescript": "^3.5.3",
     "eslint-plugin-eslint-comments": "^3.2.0",
-    "eslint-plugin-functional": "^5.0.0-beta.14",
-    "eslint-plugin-import": "^2.25.4",
-    "eslint-plugin-jsdoc": "^39.2.9",
+    "eslint-plugin-functional": "^5.0.0",
+    "eslint-plugin-import": "^2.27.5",
+    "eslint-plugin-jsdoc": "^39.7.4",
     "eslint-plugin-markdown": "^3.0.0",
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-optimize-regex": "^1.2.1",
-    "eslint-plugin-prettier": "^4.0.0",
-    "eslint-plugin-promise": "^6.0.0",
-    "eslint-plugin-sonarjs": "^0.15.0",
-    "eslint-plugin-unicorn": "^43.0.0",
-    "husky": "^8.0.1",
-    "lint-staged": "^13.0.3",
-    "markdownlint-cli": "^0.32.2",
+    "eslint-plugin-prettier": "^4.2.1",
+    "eslint-plugin-promise": "^6.1.1",
+    "eslint-plugin-sonarjs": "^0.18.0",
+    "eslint-plugin-unicorn": "^45.0.2",
+    "husky": "^8.0.3",
+    "lint-staged": "^13.1.0",
+    "markdownlint-cli": "^0.33.0",
     "nyc": "^15.1.0",
-    "prettier": "^2.5.1",
-    "rimraf": "^3.0.2",
-    "rollup": "^2.67.0",
+    "prettier": "^2.8.3",
+    "rimraf": "^4.1.2",
+    "rollup": "^3.12.0",
     "rollup-plugin-auto-external": "^2.0.0",
-    "semantic-release": "^19.0.2",
-    "ts-node": "^10.4.0",
-    "tsconfig-paths": "^4.0.0",
-    "tslib": "^2.3.1",
-    "typescript": "^4.5.5"
+    "semantic-release": "^20.1.0",
+    "ts-node": "^10.9.1",
+    "tsconfig-paths": "^4.1.2",
+    "tslib": "^2.5.0",
+    "typescript": "^4.9.4"
   },
   "peerDependencies": {
     "@typescript-eslint/eslint-plugin": "*",
@@ -113,7 +113,7 @@
     "eslint": ">=8.24.0",
     "eslint-import-resolver-typescript": "*",
     "eslint-plugin-eslint-comments": "*",
-    "eslint-plugin-functional": ">=5.0.0-beta.14",
+    "eslint-plugin-functional": ">=5.0.0",
     "eslint-plugin-import": "*",
     "eslint-plugin-jsdoc": "*",
     "eslint-plugin-markdown": "*",
