chore: pin dev deps

--- a/.github/renovate.json
+++ b/.github/renovate.json
@@ -28,7 +28,7 @@
     {
       "matchManagers": ["npm"],
       "matchDepTypes": ["devDependencies"],
-      "rangeStrategy": "update-lockfile",
+      "rangeStrategy": "pin",
       "semanticCommitType": "chore",
       "semanticCommitScope": "dev-deps"
     },
