--- a/package.json
+++ b/package.json
@@ -61,51 +61,51 @@
     "deepmerge-ts": "^4.2.2"
   },
   "devDependencies": {
-    "@commitlint/cli": "^17.4.2",
-    "@commitlint/config-conventional": "^17.4.2",
-    "@rollup/plugin-commonjs": "^24.0.1",
-    "@rollup/plugin-node-resolve": "^15.0.1",
-    "@rollup/plugin-typescript": "^11.0.0",
-    "@semantic-release/changelog": "^6.0.2",
-    "@semantic-release/commit-analyzer": "^9.0.2",
-    "@semantic-release/git": "^10.0.1",
-    "@semantic-release/github": "^8.0.7",
-    "@semantic-release/npm": "^9.0.2",
-    "@semantic-release/release-notes-generator": "^10.0.3",
-    "@types/eslint": "^8.4.10",
-    "@types/node": "^18.11.18",
-    "@typescript-eslint/eslint-plugin": "^5.49.0",
-    "@typescript-eslint/parser": "^5.49.0",
-    "commitizen": "^4.3.0",
-    "cspell": "^6.19.2",
-    "cz-conventional-changelog": "^3.3.0",
-    "eslint": "^8.33.0",
-    "eslint-config-prettier": "^8.6.0",
-    "eslint-import-resolver-typescript": "^3.5.3",
-    "eslint-plugin-eslint-comments": "^3.2.0",
-    "eslint-plugin-functional": "^5.0.3",
-    "eslint-plugin-import": "^2.27.5",
-    "eslint-plugin-jsdoc": "^39.7.4",
-    "eslint-plugin-markdown": "^3.0.0",
-    "eslint-plugin-node": "^11.1.0",
-    "eslint-plugin-optimize-regex": "^1.2.1",
-    "eslint-plugin-prettier": "^4.2.1",
-    "eslint-plugin-promise": "^6.1.1",
-    "eslint-plugin-sonarjs": "^0.18.0",
-    "eslint-plugin-unicorn": "^45.0.2",
-    "husky": "^8.0.3",
-    "lint-staged": "^13.1.0",
-    "markdownlint-cli": "^0.33.0",
-    "nyc": "^15.1.0",
-    "prettier": "^2.8.3",
-    "rimraf": "^4.1.2",
-    "rollup": "^3.12.0",
-    "rollup-plugin-auto-external": "^2.0.0",
-    "semantic-release": "^20.1.0",
-    "ts-node": "^10.9.1",
-    "tsconfig-paths": "^4.1.2",
-    "tslib": "^2.5.0",
-    "typescript": "^4.9.4"
+    "@commitlint/cli": "17.4.2",
+    "@commitlint/config-conventional": "17.4.2",
+    "@rollup/plugin-commonjs": "24.0.1",
+    "@rollup/plugin-node-resolve": "15.0.1",
+    "@rollup/plugin-typescript": "11.0.0",
+    "@semantic-release/changelog": "6.0.2",
+    "@semantic-release/commit-analyzer": "9.0.2",
+    "@semantic-release/git": "10.0.1",
+    "@semantic-release/github": "8.0.7",
+    "@semantic-release/npm": "9.0.2",
+    "@semantic-release/release-notes-generator": "10.0.3",
+    "@types/eslint": "8.4.10",
+    "@types/node": "18.11.18",
+    "@typescript-eslint/eslint-plugin": "5.49.0",
+    "@typescript-eslint/parser": "5.49.0",
+    "commitizen": "4.3.0",
+    "cspell": "6.19.2",
+    "cz-conventional-changelog": "3.3.0",
+    "eslint": "8.33.0",
+    "eslint-config-prettier": "8.6.0",
+    "eslint-import-resolver-typescript": "3.5.3",
+    "eslint-plugin-eslint-comments": "3.2.0",
+    "eslint-plugin-functional": "5.0.3",
+    "eslint-plugin-import": "2.27.5",
+    "eslint-plugin-jsdoc": "39.7.4",
+    "eslint-plugin-markdown": "3.0.0",
+    "eslint-plugin-node": "11.1.0",
+    "eslint-plugin-optimize-regex": "1.2.1",
+    "eslint-plugin-prettier": "4.2.1",
+    "eslint-plugin-promise": "6.1.1",
+    "eslint-plugin-sonarjs": "0.18.0",
+    "eslint-plugin-unicorn": "45.0.2",
+    "husky": "8.0.3",
+    "lint-staged": "13.1.0",
+    "markdownlint-cli": "0.33.0",
+    "nyc": "15.1.0",
+    "prettier": "2.8.3",
+    "rimraf": "4.1.2",
+    "rollup": "3.12.0",
+    "rollup-plugin-auto-external": "2.0.0",
+    "semantic-release": "20.1.0",
+    "ts-node": "10.9.1",
+    "tsconfig-paths": "4.1.2",
+    "tslib": "2.5.0",
+    "typescript": "4.9.4"
   },
   "peerDependencies": {
     "@typescript-eslint/eslint-plugin": "*",
