--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,14 +1,10 @@
 {
-  "files.exclude": {
-    "rollup.config.cjs": true,
-  },
   "files.trimTrailingWhitespace": true,
   "search.exclude": {
     "**/.git/": true,
     ".vscode/": true,
     "dist/": true,
-    "rollup.config.cjs": true,
-    "yarn.lock": true,
+    "pnpm-lock.yaml": true
   },
   "typescript.tsdk": "./node_modules/typescript/lib",
   "files.associations": {
@@ -16,15 +12,15 @@
     ".markdownlintignore": "ignore"
   },
   "[json]": {
-    "editor.defaultFormatter": "vscode.json-language-features",
-    "editor.formatOnSave": false,
+    "editor.defaultFormatter": "esbenp.prettier-vscode",
+    "editor.formatOnSave": true
   },
   "[jsonc]": {
-    "editor.defaultFormatter": "vscode.json-language-features",
-    "editor.formatOnSave": false,
+    "editor.defaultFormatter": "esbenp.prettier-vscode",
+    "editor.formatOnSave": true
   },
   "[typescript]": {
     "editor.defaultFormatter": "esbenp.prettier-vscode",
-    "editor.formatOnSave": true,
-  },
+    "editor.formatOnSave": true
+  }
 }
