--- a/package.json
+++ b/package.json
@@ -40,29 +40,33 @@
   "files": [
     "dist/",
     "package.json",
-    "CHANGELOG.md",
     "LICENSE",
     "README.md"
   ],
   "scripts": {
-    "build": "rimraf dist && rollup -c",
-    "check-format": "prettier --list-different \"./**/*.{md,ts,yml}\"",
-    "check-spelling": "cspell --config=.cspell.json \"**/*.{md,ts}\"",
+    "build": "rimraf dist && rollup -c rollup.config.ts --configPlugin @rollup/plugin-typescript",
     "cz": "git-cz",
-    "format": "prettier --write \"./**/*.{md,ts,yml}\"",
     "generate-eslintrc": "ts-node -P scripts/tsconfig.json -r tsconfig-paths/register scripts/generate-eslintrc.ts",
-    "lint": "yarn lint:js && yarn lint:md",
-    "lint:js": "yarn generate-eslintrc && eslint .",
+    "lint": "pnpm run lint:js && pnpm run lint:md && pnpm run lint:prettier && pnpm run lint:knip && pnpm run lint:spelling",
+    "lint:js": "pnpm run build && pnpm run generate-eslintrc && eslint .",
+    "lint:js-fix": "pnpm run generate-eslintrc && eslint . --fix",
+    "lint:knip": "knip --config knip.jsonc --production --exclude exports",
     "lint:md": "markdownlint \"**/*.md\" --config=.markdownlint.json --ignore-path=.markdownlintignore",
+    "lint:prettier": "prettier \"**/*\" --ignore-unknown --list-different",
+    "lint:prettier-fix": "prettier \"**/*\" --ignore-unknown --write",
+    "lint:spelling": "cspell \"**\" \".github/**/*\"",
     "prepare": "husky install",
-    "test": "echo no tests"
+    "test": "echo no tests",
+    "type-check": "tsc --noEmit"
   },
   "dependencies": {
-    "deepmerge-ts": "^4.2.2"
+    "deepmerge-ts": "^4.3.0"
   },
   "devDependencies": {
-    "@commitlint/cli": "17.4.2",
-    "@commitlint/config-conventional": "17.4.2",
+    "@commitlint/cli": "17.4.4",
+    "@commitlint/config-conventional": "17.4.4",
+    "@cspell/dict-cryptocurrencies": "3.0.1",
+    "@rebeccastevens/eslint-config": "1.5.3",
     "@rollup/plugin-commonjs": "24.0.1",
     "@rollup/plugin-node-resolve": "15.0.1",
     "@rollup/plugin-typescript": "11.0.0",
@@ -73,35 +77,42 @@
     "@semantic-release/npm": "9.0.2",
     "@semantic-release/release-notes-generator": "10.0.3",
     "@types/eslint": "8.21.0",
-    "@types/node": "18.11.19",
-    "@typescript-eslint/eslint-plugin": "5.50.0",
-    "@typescript-eslint/parser": "5.50.0",
+    "@types/node": "18.15.0",
+    "@types/rollup-plugin-auto-external": "2.0.2",
+    "@typescript-eslint/eslint-plugin": "5.54.1",
+    "@typescript-eslint/parser": "5.54.1",
+    "ava": "5.2.0",
+    "c8": "7.13.0",
     "commitizen": "4.3.0",
-    "cspell": "6.22.0",
+    "cspell": "6.28.0",
     "cz-conventional-changelog": "3.3.0",
-    "eslint": "8.33.0",
-    "eslint-config-prettier": "8.6.0",
+    "eslint": "8.35.0",
+    "eslint-config-prettier": "8.7.0",
     "eslint-import-resolver-typescript": "3.5.3",
+    "eslint-plugin-ava": "14.0.0",
     "eslint-plugin-eslint-comments": "3.2.0",
-    "eslint-plugin-functional": "5.0.3",
+    "eslint-plugin-functional": "5.0.5",
     "eslint-plugin-import": "2.27.5",
-    "eslint-plugin-jsdoc": "39.8.0",
+    "eslint-plugin-jsdoc": "40.0.1",
     "eslint-plugin-markdown": "3.0.0",
     "eslint-plugin-node": "11.1.0",
     "eslint-plugin-optimize-regex": "1.2.1",
     "eslint-plugin-prettier": "4.2.1",
     "eslint-plugin-promise": "6.1.1",
     "eslint-plugin-sonarjs": "0.18.0",
-    "eslint-plugin-unicorn": "45.0.2",
+    "eslint-plugin-unicorn": "46.0.0",
     "husky": "8.0.3",
-    "lint-staged": "13.1.0",
+    "knip": "2.0.0-alpha.3",
+    "lint-staged": "13.1.2",
     "markdownlint-cli": "0.33.0",
     "nyc": "15.1.0",
-    "prettier": "2.8.3",
-    "rimraf": "4.1.2",
-    "rollup": "3.14.0",
+    "prettier": "2.8.4",
+    "prettier-plugin-packagejson": "2.4.3",
+    "rimraf": "4.4.0",
+    "rollup": "3.19.0",
     "rollup-plugin-auto-external": "2.0.0",
-    "semantic-release": "20.1.0",
+    "rollup-plugin-dts": "5.2.0",
+    "semantic-release": "20.1.1",
     "ts-node": "10.9.1",
     "tsconfig-paths": "4.1.2",
     "tslib": "2.5.0",
@@ -123,6 +134,7 @@
     "eslint-plugin-sonarjs": "*",
     "eslint-plugin-unicorn": "*"
   },
+  "packageManager": "pnpm@7.29.0",
   "engines": {
     "node": "^14.17.0 || >=16.0.0"
   }
