chore: update repo files

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -17,8 +17,8 @@ concurrency:
 jobs:
   lint_js:
     uses: ./.github/workflows/lint-js.yml
-  lint_knip:
-    uses: ./.github/workflows/lint-knip.yml
+  lint_knip_prod:
+    uses: ./.github/workflows/lint-knip-prod.yml
   lint_markdown:
     uses: ./.github/workflows/lint-markdown.yml
   lint_spelling:
@@ -31,7 +31,7 @@ jobs:
   release:
     needs:
       - lint_js
-      - lint_knip
+      - lint_knip_prod
       - lint_markdown
       - lint_spelling
       - lint_prettier
@@ -48,7 +48,7 @@ jobs:
         run: pnpm run build
 
       - name: Release
-        run: pnpm semantic-release
+        run: pnpm run release
         env:
-          GH_TOKEN: ${{ secrets.GH_TOKEN }}
+          GITHUB_TOKEN: ${{ github.token }}
           NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
