feat: improve config merging and typescript import settings
BREAKING CHANGE: node >= 18.12.1 now required

--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -26,6 +26,7 @@
     "baseUrl": "./src",
     "paths": {
       "~": ["."],
+      "~/*": ["./common/*"],
       "~/builtin": ["./builtin"],
       "~/configs/*": ["./configs/*"],
       "~/plugins/*": ["./plugins/*"]
